This is the commit for the web application

--- a/Boston House Price Prediction.ipynb
+++ b/Boston House Price Prediction.ipynb
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6671671f",
+   "id": "63f44b4b",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1abbfcf",
+   "id": "b345fde6",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e570818",
+   "id": "06b38031",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de8b4c28",
+   "id": "ab4d8420",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a301cca",
+   "id": "f47c1eed",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbd457dd",
+   "id": "a2f9123c",
    "metadata": {},
    "source": [
     "# Preparing The Dataset"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b54b1a99",
+   "id": "5f9daf6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "06a56b71",
+   "id": "526ebdea",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "45446e1b",
+   "id": "a570cb38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19e059ed",
+   "id": "83eeff8d",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a97418f4",
+   "id": "4de21c49",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d85ff6e1",
+   "id": "f18448b9",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "079189dd",
+   "id": "c935dd23",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ecd1f861",
+   "id": "def8229e",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "01f0c46c",
+   "id": "ac91d053",
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2d9e2978",
+   "id": "9a8ccb94",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ca344453",
+   "id": "0f00ae81",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "272a5804",
+   "id": "4efea7ee",
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3a3bda49",
+   "id": "41ccae81",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7308230c",
+   "id": "2c26da47",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "72259869",
+   "id": "fbde11a7",
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a784f8be",
+   "id": "0f412e6e",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3f2e7f45",
+   "id": "153c7a95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b7330190",
+   "id": "5497f12f",
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0fba235c",
+   "id": "3f087c8f",
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "4eae4553",
+   "id": "9571b0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "3b2908f3",
+   "id": "db75496e",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "1c467c4b",
+   "id": "8a7e415e",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "c8468be6",
+   "id": "9e5a80c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "83925ced",
+   "id": "2019b7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "8bd97fb6",
+   "id": "5110ab38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,7 +2248,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "b4227257",
+   "id": "8bbcb01b",
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2281,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "73178f68",
+   "id": "e632d521",
    "metadata": {},
    "outputs": [
     {
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcea045",
+   "id": "1f028d99",
    "metadata": {},
    "source": [
     "# Model Training"
@@ -2322,7 +2322,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "a8c1a14d",
+   "id": "a971860c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "5b319e8e",
+   "id": "6e0e4105",
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "762529dd",
+   "id": "ec1f1f38",
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2373,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "e99bae82",
+   "id": "c9007bf9",
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "b03f3cd3",
+   "id": "8d32385d",
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d2ec48",
+   "id": "baa8b1bb",
    "metadata": {},
    "source": [
     "# Assumptions"
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "ae4d0cac",
+   "id": "442652e6",
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2494,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "f80ea477",
+   "id": "73fd9642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2505,7 +2505,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "43990d57",
+   "id": "c3f54db0",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "7edf9c1d",
+   "id": "b8dde914",
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "67ff30b2",
+   "id": "88453db4",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "b696c524",
+   "id": "b099ca9f",
    "metadata": {},
    "outputs": [
     {
@@ -2627,7 +2627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7d3344",
+   "id": "d47a5839",
    "metadata": {},
    "source": [
     "# R square and adjusted R square\n",
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "70da191a",
+   "id": "9b46a102",
    "metadata": {},
    "outputs": [
     {
@@ -2661,7 +2661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6dace72",
+   "id": "a27453c7",
    "metadata": {},
    "source": [
     "# Adjusted R2 = 1 – [(1-R2)*(n-1)/(n-k-1)]\n",
@@ -2674,7 +2674,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "225c87ff",
+   "id": "9c5ac70a",
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca71f8e7",
+   "id": "46d13c6a",
    "metadata": {},
    "source": [
     "# New Data Prediction"
@@ -2704,7 +2704,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "9bfb40f0",
+   "id": "d52720c7",
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "5f3321b2",
+   "id": "6f60b050",
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "8ecbdaa4",
+   "id": "9e4c3e65",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d2bc927",
+   "id": "2cef56b2",
    "metadata": {},
    "source": [
     "# Pickling The Model file For Deployment"
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "882493ec",
+   "id": "73869468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2806,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "885dfe90",
+   "id": "3bf18f8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2817,7 +2817,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "f9a2e9ec",
+   "id": "fa4827fc",
    "metadata": {},
    "outputs": [
     {
@@ -2846,8 +2846,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 186,
+   "id": "a0822134",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 13)"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston.data[0].reshape(1,-1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1c253130",
+   "id": "ff9faf42",
    "metadata": {},
    "outputs": [],
    "source": []
